@@ -1502,6 +1502,19 @@ If you have this image in full resolution upload this one, otherwise change the 
 'filerevert-success'        => "<span class=\"plainlinks\">'''[[Media:$1|$1]]''' has been reverted to the [$4 version as of $2, $3].</span>",
 'filerevert-badversion'     => 'There is no previous local version of this file with the provided timestamp.',
 
+# File deletion
+'filedelete' => 'Delete $1',
+'filedelete-legend' => 'Delete file',
+'filedelete-intro' => "You are deleting '''[[Media:$1|$1]]'''.",
+'filedelete-intro-old' => "<span class=\"plainlinks\">You are deleting the version of '''[[Media:$1|$1]]''' as of [$4 $2, $3].</span>",
+'filedelete-comment' => 'Comment:',
+'filedelete-submit' => 'Delete',
+'filedelete-success' => "'''$1''' has been deleted.",
+'filedelete-success-old' => "<span class=\"plainlinks\">The version of '''[[Media:$1|$1]]''' as of $2, $3 has been deleted.</span>",
+'filedelete-nofile' => "'''$1''' does not exist on this site.",
+'filedelete-nofile-old' => "There is no version of '''$1''' dated $2, $3.",
+'filedelete-iscurrent' => 'You are attempting to delete the most recent version of this file. Please revert to an older version first.',
+
 # MIME search
 'mimesearch'         => 'MIME search',
 'mimesearch-summary' => 'This page enables the filtering of files for its MIME-type. Input: contenttype/subtype, e.g. <tt>image/jpeg</tt>.',
