@@ -898,6 +898,19 @@ $wgMessageStructure = array(
 		'filerevert-success',
 		'filerevert-badversion',
 	),
+	'filedelete' => array(
+		'filedelete',
+		'filedelete-legend',
+		'filedelete-intro',
+		'filedelete-intro-old',
+		'filedelete-comment',
+		'filedelete-submit',
+		'filedelete-success',
+		'filedelete-success-old',
+		'filedelete-nofile',
+		'filedelete-nofile-old',
+		'filedelete-iscurrent',
+	),
 	'mimesearch' => array(
 		'mimesearch',
 		'mimesearch-summary',
@@ -2241,6 +2254,7 @@ XHTML id names.",
 	'licenses'            => '',
 	'imagelist'           => 'Image list',
 	'filerevert'          => 'File reversion',
+	'filedelete'		  => 'File deletion',
 	'mimesearch'          => 'MIME search',
 	'unwatchedpages'      => 'Unwatched pages',
 	'listredirects'       => 'List redirects',
