@@ -177,6 +177,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10937) Distinguish overwritten files in upload log
 * Introduce 'ArticleUpdateBeforeRedirect' hook; see docs/hooks.txt for more
   information
+* Confirmation is now required when deleting old versions of files
+* Users can now enter comments when deleting old versions of files
 
 == Bugfixes since 1.10 ==
 
